kubernetes/envs/minikube/jsWorld/jsworld-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsworld 
spec:
  type: NodePort
  selector:
    app: jsworld
  ports:
    - name: 'http'
      port: 8080
      targetPort: 8080
