kubernetes/envs/minikube/jsWorld/jsworld-node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsworld
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - jsworld.dev
      secretName: jsworld-tls
  rules:
    - host: jsworld.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jsworld
              port:
                number: 8080
